--- a/student-services/src/main/resources/application.properties
+++ b/student-services/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-# spring-rest-crud-mysql-rnd-
-Spring rest example with mysql as backend
+spring.application.name=student-services
 
-# Add following lines to our application.properties file:
-
+# Enabling H2 Console
+spring.h2.console.enabled=true
+#Turn Statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+# Show all queries
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
+# spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
